--- a/src/App.scss
+++ b/src/App.scss
@@ -21,7 +21,9 @@ input, textarea {
   border: none;
   border: solid 1px #000;
   }
-
+.dn{
+  display: none;
+}
 .card{
   display: flex;
   flex-direction: column;
@@ -565,13 +567,15 @@ input, textarea {
       padding: 5px 10px; } }
 
 .searchpopup__container{
-  display: none;
+
   z-index: 9999;
   position: absolute;
   top: 25px;
   left: 5px;
   width: 400px;
-  height: auto;
+  max-height: 465px;
+  overflow: scroll;
+  overflow-x: hidden;
   background-color: rgb(255, 255, 255);
   box-shadow: 0 1px 2px 0 rgba(0,0,0,0.16);
   border: solid 1px transparent;
