--- a/src/App.scss
+++ b/src/App.scss
@@ -55,19 +55,18 @@ textarea {
     justify-content: space-between;
     align-items: center;
     width: 100%;
-    height: 30%;
+    height: auto;
     padding: 0 0 0 5px;
-    &--name {
-      a {
-        color: #000;
-        font-size: 12px;
-        text-decoration: none;
-      }
-      margin-bottom: 10px;
+    font-size: 12px;
+    &--leftSide {
+      display: flex;
+      flex-direction: column;
+      justify-content: space-between;
     }
-    &--price {
-      font-weight: 400;
-      font-size: 15px;
+    &--name {
+      color: #000;
+      text-decoration: none;
+      margin-bottom: 10px;
     }
     &--rightSide {
       height: 100%;
@@ -126,7 +125,7 @@ textarea {
   display: flex;
   width: 100%;
   flex-wrap: wrap;
-  &-value{
+  &-value {
     width: 50%;
     margin-bottom: 30px;
   }
@@ -136,6 +135,16 @@ textarea {
   justify-content: center;
   width: 100%;
   flex-flow: wrap;
+}
+.catalog__products {
+  display: flex;
+  flex-wrap: wrap;
+}
+.catalog__name{
+  width: 100%;
+  font-size: 16px;
+  font-weight: bold;
+  margin: 0 0 20px 9px;
 }
 div {
   box-sizing: border-box;
