--- a/src/App.scss
+++ b/src/App.scss
@@ -93,6 +93,8 @@ textarea {
 }
 
 .main__sidebar {
+  display: flex;
+  flex-direction: column;
   border-radius: 8px;
   box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.16);
   border: solid 1px transparent;
@@ -100,8 +102,11 @@ textarea {
   width: 30%;
   height: fit-content;
   margin-right: 30px;
-  nav {
+  nav,
+  form {
     li {
+      display: flex;
+      align-items: center;
       cursor: pointer;
       list-style-type: none;
       width: 100%;
@@ -116,7 +121,31 @@ textarea {
       }
     }
   }
+  form {
+    position: relative;
+    input[type="submit"],
+    .resetBtn {
+      cursor: pointer;
+      font-family: "Montserrat", sans-serif;
+      font-size: 14px;
+      background: #fff;
+      box-shadow: 0 1px 2px 0 rgb(0 0 0 / 16%);
+      border: solid 1px transparent;
+      padding: 15px 0px;
+      width: 120px;
+      text-align: center;
+    }
+  }
+  .icon{
+    margin-right: 5px;
+    opacity: 0.6;
+    height: 12px;
+    img{
+      width: 14px;
+    }
+  }
 }
+
 .main__catalog {
   display: flex;
   justify-content: space-between;
@@ -132,8 +161,8 @@ textarea {
 }
 .catalog__content {
   display: flex;
-  justify-content: center;
   width: 100%;
+  flex-direction: column;
   flex-flow: wrap;
 }
 .catalog__products {
@@ -141,6 +170,7 @@ textarea {
   flex-wrap: wrap;
   width: 100%;
   &-card {
+    padding: 20px 0px;
     display: flex;
     border-radius: 8px;
     box-shadow: 0 1px 2px 0 rgb(0 0 0 / 16%);
@@ -150,7 +180,6 @@ textarea {
     width: 100%;
     margin-bottom: 30px;
     &-logo {
-      padding: 20px 0px;
       display: flex;
       justify-content: center;
       align-items: center;
@@ -341,7 +370,7 @@ div {
     margin-left: 10px;
   }
   img {
-    width: 30px;
+    width: 24px;
   }
 }
 .footer {
@@ -770,4 +799,34 @@ div {
       opacity: 0.6;
     }
   }
+}
+.filterPanel__company {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  label {
+    margin: 5px 0;
+  }
+}
+.filterPanel__price {
+  display: flex;
+  justify-content: space-between;
+  input {
+    border: 1px solid rgb(211, 211, 211);
+    width: 110px;
+    height: 30px;
+    border-radius: 20px;
+    text-align: center;
+    color: rgb(134, 134, 134);
+    &::placeholder {
+      color: rgb(211, 211, 211);
+    }
+  }
+}
+.filterPanel__btns {
+  position: absolute;
+  margin-top: 20px;
+  display: flex;
+  width: 100%;
+  justify-content: space-between;
 }
