--- a/src/App.scss
+++ b/src/App.scss
@@ -186,7 +186,7 @@ textarea {
       width: 20%;
 
       img {
-        width: 70%;
+        width: 50%;
       }
     }
     &-status {
@@ -200,17 +200,45 @@ textarea {
     }
     &-price {
       font-size: 16px;
-      margin-bottom: 15px;
     }
     &-info {
       display: flex;
-      padding: 10px;
     }
     &-right {
       display: flex;
       flex-direction: column;
       align-items: center;
       justify-content: center;
+    }
+    &-center {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      width: 50%;
+    }
+    &-counter {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      height: 30px;
+      width: 90px;
+      border: 1px solid rgb(218, 218, 218);
+      span,
+      button {
+        width: 20px;
+        text-align: center;
+        height: 94%;
+        width: 100%;
+        border: none;
+        background: #fff;
+        color: rgb(138, 137, 137);
+      }
+      span {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        font-size: 13.3px;
+      }
     }
     &-icon {
       opacity: 0.7;
@@ -239,7 +267,7 @@ textarea {
   width: 100%;
   font-size: 16px;
   font-weight: bold;
-  margin: 0 0 20px 9px;
+  margin: 0 0 20px 0px;
 }
 div {
   box-sizing: border-box;
@@ -855,56 +883,60 @@ div {
     padding: 16px 12px;
     min-height: 140px;
     background-color: #fff;
-    &--header{
-      display: flex; justify-content: space-between;
+    &--header {
+      display: flex;
+      justify-content: space-between;
       font-size: 14px;
       margin-bottom: 20px;
-      &-title{
+      &-title {
         font-weight: bold;
       }
+      &-clearBasket {
+        cursor: pointer;
+      }
     }
-    &--content{
-      &-card{
+    &--content {
+      &-card {
         display: flex;
         justify-content: space-between;
         border-bottom: 1px solid rgba(0, 0, 0, 0.158);
         padding-bottom: 20px;
         margin-bottom: 20px;
-        &-leftSide{
+        &-leftSide {
           font-size: 12px;
           display: flex;
           align-items: center;
         }
-        &-logo{
+        &-logo {
           width: 50px;
           margin-right: 10px;
-          img{
+          img {
             width: 100%;
           }
         }
-        &-removeBtn{
+        &-removeBtn {
           cursor: pointer;
           width: 20px;
           margin-left: 5px;
-          img{
+          img {
             width: 100%;
           }
         }
       }
     }
-    &--footer{
-      &-sum{
+    &--footer {
+      &-sum {
         display: flex;
         justify-content: space-between;
         font-weight: bold;
         font-size: 16px;
         margin-bottom: 10px;
       }
-      &-btns{
+      &-btns {
         display: flex;
         justify-content: flex-end;
       }
-      &-btn{
+      &-btn {
         cursor: pointer;
         font-family: "Montserrat", sans-serif;
         font-size: 14px;
@@ -914,11 +946,26 @@ div {
         padding: 15px 10px;
         width: auto;
         text-align: center;
-        &:last-child{
+        &:last-child {
           margin-left: 40px;
         }
       }
     }
   }
+}
 
+.basket__page {
+  .catalog__products {
+    &-card {
+      width: 98%;
+    }
+  }
+  img {
+    width: 80%;
+  }
+  .main__sidebar {
+    margin-top: 40px;
+    margin-right: 0px;
+    width: 40%;
+  }
 }
